<resources>
    <string name="app_name">E-Commerce-App-Pra-Final-Project</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment" translatable="false">Hello blank fragment</string>

    <!--  Choose Language  -->
    <string name="choose_language">Choose Language</string>
    <string name="english">English</string>
    <string name="indonesian">Indonesian</string>

    <!--  Custom Detail  -->
    <string name="product">Product</string>
    <string name="product_detail">Product Detail</string>
    <string name="change_data">Change Data</string>
    <string name="about_us">About Us</string>
    <string name="give_feedback">Give Feedback</string>
    <string name="maintenance">Maintenance</string>
    <string name="logout">Logout</string>
    <string name="help">Help</string>
    <string name="back">Back</string>
    <string name="dheva" translatable="false">Dheva</string>
    <string name="Sekar" translatable="false">Sekar</string>
    <string name="rio" translatable="false">Rio</string>

    <!--  Home  -->
    <string name="search_category">Search Category</string>
    <string name="product_popular">Product Popular</string>

    <!--  Bottom Navigation  -->
    <string name="home">Home</string>
    <string name="news">News</string>
    <string name="favorite">Favorite</string>
    <string name="cart">Cart</string>
    <string name="account">Account</string>

    <!--  Another Detail  -->
    <string name="coming_soon">Coming Soon</string>
    <string name="electronic">Electronic</string>

    <!--  Login/Register Detail  -->
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="username">Username</string>
    <string name="email" translatable="false">Email</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="already_have_account">Already Have Account?</string>
    <string name="not_registered_yet">Not Registered Yet?</string>

    <!--  Cart Detail  -->
    <string name="voucher" translatable="false">Voucher</string>
    <string name="input_voucher_code">Input Voucher Code</string>
    <string name="use">Use</string>
    <string name="order_quantity">Order Quantity</string>
    <string name="subtotal_product">Subtotal Product</string>
    <string name="voucher_discount">Voucher Discount</string>
    <string name="vat_include">(VAT Include)</string>
    <string name="quantity">Quantity :</string>
    <string name="_1" translatable="false">1</string>
    <string name="total" translatable="false">Total</string>
    <string name="transaction_process">Transaction Process</string>


    <!--  Product Detail  -->
    <string name="product_name">Product Name</string>
    <string name="category">Category</string>
    <string name="product_price">Product Price</string>
    <string name="product_return">Product Return</string>
    <string name="product_free_return">30 Days Free Returns</string>
    <string name="product_about">About Product</string>
    <string name="product_description">Description Description</string>
    <string name="product_rate">Product Rate</string>
    <string name="see_all_voucher">See All Voucher</string>
    <string name="buy_now">Buy Now</string>
    <string name="order" translatable="false">Order</string>
    <string name="view_all">View All</string>
    <string name="wishlist" translatable="false">Wishlist</string>
    <string name="put_in_cart">Put in Cart</string>
    <string name="title_news">News</string>
    <string name="message">Message</string>
    <string name="add_to_favorite">Add to Favorite</string>
    <string name="news_description">Description News</string>

</resources>