<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/home"
        android:enabled="true"
        android:icon="@drawable/baseline_home_24"
        android:title="@string/home"/>
    <item
        android:id="@+id/news"
        android:enabled="true"
        android:icon="@drawable/baseline_newspaper_24"
        android:title="@string/news"/>
    <item
        android:id="@+id/favorite"
        android:enabled="true"
        android:icon="@drawable/baseline_favorite_24"
        android:title="@string/favorite"/>
    <item
        android:id="@+id/cart"
        android:enabled="true"
        android:icon="@drawable/baseline_shopping_cart_24"
        android:title="@string/cart"/>
    <item
        android:id="@+id/account"
        android:enabled="true"
        android:icon="@drawable/baseline_account_circle_24"
        android:title="@string/account"/>
</menu>