<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.AccountFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maya_blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center">

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/account"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="20dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImage"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:scaleType="centerCrop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Your Name"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_profileImage"
            app:layout_constraintStart_toStartOf="@id/iv_profileImage"
            app:layout_constraintEnd_toEndOf="@id/iv_profileImage" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_changeData"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maya_blue"
            android:text="@string/change_data"
            app:layout_constraintTop_toBottomOf="@id/tv_username"
            app:layout_constraintStart_toStartOf="@id/tv_username"
            app:layout_constraintEnd_toEndOf="@id/tv_username"
            android:layout_margin="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_aboutUs"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maya_blue"
            android:text="@string/about_us"
            app:layout_constraintTop_toBottomOf="@id/btn_changeData"
            app:layout_constraintStart_toStartOf="@id/btn_changeData"
            app:layout_constraintEnd_toEndOf="@id/btn_changeData"
            android:layout_margin="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_giveFeedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maya_blue"
            android:text="@string/give_feedback"
            app:layout_constraintTop_toBottomOf="@id/btn_aboutUs"
            app:layout_constraintStart_toStartOf="@id/btn_aboutUs"
            app:layout_constraintEnd_toEndOf="@id/btn_aboutUs"
            android:layout_margin="20dp"/>
        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/maya_blue"
            android:text="@string/logout"
            app:layout_constraintTop_toBottomOf="@id/btn_giveFeedback"
            app:layout_constraintStart_toStartOf="@id/btn_giveFeedback"
            app:layout_constraintEnd_toEndOf="@id/btn_giveFeedback"
            android:layout_margin="20dp"/>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottom_navigation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:menu="@menu/bottom_navigation_menu"
        android:layout_gravity="bottom" />
</androidx.coordinatorlayout.widget.CoordinatorLayout>