<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="20dp"
    app:cardElevation="50dp"
    app:cardBackgroundColor="@color/white"
    android:layout_margin="20dp"
    >

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_img_product"
            android:layout_width="170dp"
            android:src="@drawable/logo_foreground"
            android:layout_height="match_parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNamaProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@+id/iv_img_product"
            android:layout_marginStart="20dp"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCategoryItemCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvNamaProduct"
            app:layout_constraintStart_toEndOf="@+id/iv_img_product"
            android:layout_marginStart="20dp"
            android:text="@string/category"
            android:textSize="14sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvTextJumlah"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryItemCart"
            app:layout_constraintStart_toEndOf="@+id/iv_img_product"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/total"
            android:textSize="14sp"
            />
        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvJumlahProduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryItemCart"
            app:layout_constraintStart_toEndOf="@+id/tvTextJumlah"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:text="@string/_1"
            android:textSize="14sp"
            />

        <Spinner
            android:id="@+id/spJumlahProduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintStart_toEndOf="@+id/tvJumlahProduk"
            app:layout_constraintTop_toBottomOf="@id/tvCategoryItemCart"
            android:layout_marginTop="10dp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHargaCartproduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@+id/tvTextJumlah"
            app:layout_constraintStart_toEndOf="@+id/iv_img_product"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="Rp. 100.000"
            />

        <com.google.android.material.imageview.ShapeableImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/ic_delete"
            app:layout_constraintStart_toEndOf="@+id/spJumlahProduk"
            app:layout_constraintTop_toBottomOf="@+id/tvCategoryItemCart"
            android:layout_marginTop="8dp"
            />


    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.cardview.widget.CardView>