<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:layout_margin="20dp"
    app:cardCornerRadius="20dp"
    app:cardElevation="50dp"
    app:cardBackgroundColor="@color/white">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="10dp">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_img_product"
            android:layout_width="170dp"
            android:layout_height="match_parent"
            android:src="@drawable/logo_foreground"
            android:layout_alignParentStart="true"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvNamaProduct"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_img_product"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/product_name"
            android:textStyle="bold"
            android:textSize="18sp"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvCategoryItemCart"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_img_product"
            android:layout_below="@+id/tvNamaProduct"
            android:layout_marginStart="20dp"
            android:text="@string/category"
            android:textSize="14sp"
            />


        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvHargaCartproduk"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toEndOf="@+id/iv_img_product"
            android:layout_below="@+id/tvCategoryItemCart"
            android:layout_marginStart="20dp"
            android:layout_marginTop="30dp"
            android:textSize="16sp"
            android:text="Rp. 100.000"
            />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnPesanWishlist"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/black"
            android:layout_toEndOf="@+id/iv_img_product"
            android:layout_below="@id/tvHargaCartproduk"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            android:text="@string/order"
            />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/ivFavourite"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:src="@drawable/ic_favourite_true"
            android:layout_toEndOf="@+id/btnPesanWishlist"
            android:layout_below="@+id/tvHargaCartproduk"
            android:layout_marginStart="10dp"
            android:layout_marginTop="15dp"
            />

    </RelativeLayout>

</androidx.cardview.widget.CardView>
