<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ui.AboutUsFragment">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maya_blue">

        <com.google.android.material.appbar.MaterialToolbar
            android:id="@+id/topAppBar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:gravity="center">

            <com.google.android.material.imageview.ShapeableImageView
                android:id="@+id/btn_back"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_arrow_back"
                android:layout_margin="20dp"/>

            <com.google.android.material.textview.MaterialTextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textColor="@color/white"
                android:textSize="20sp"
                android:layout_margin="20dp"/>

        </com.google.android.material.appbar.MaterialToolbar>

    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior"
        android:layout_gravity="center">

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImage"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_margin="20dp"
            android:scaleType="centerCrop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dheva"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_profileImage"
            app:layout_constraintStart_toStartOf="@id/iv_profileImage"
            app:layout_constraintEnd_toEndOf="@id/iv_profileImage" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImage2"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:scaleType="centerCrop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/rio"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_profileImage2"
            app:layout_constraintStart_toStartOf="@id/iv_profileImage2"
            app:layout_constraintEnd_toEndOf="@id/iv_profileImage2" />

        <com.google.android.material.imageview.ShapeableImageView
            android:id="@+id/iv_profileImage3"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:src="@drawable/baseline_account_circle_24"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_margin="20dp"
            android:scaleType="centerCrop" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tv_username3"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/Sekar"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintTop_toBottomOf="@id/iv_profileImage3"
            app:layout_constraintStart_toStartOf="@id/iv_profileImage3"
            app:layout_constraintEnd_toEndOf="@id/iv_profileImage3" />


    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>